# localmate

./: .gitignore  DEPLOY.md  ONBOARDING.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  __init__.py  config.py  db.py  main.py  pyproject.toml  scheduler.py  task_queue.py  worker.py
backend/jobs/: appointment_followup.py  competitor_watch.py  menu_sync.py  review_poll.py  seo_report.py  trial_emails.py
backend/middleware/: auth.py  trial_gate.py
backend/routers/: approve.py  auth.py  billing.py  drafts.py  locations.py  menu.py  practitioners.py  seo.py  webhooks.py
backend/scripts/: setup_gbp_notification.py
backend/services/: appointment_shape.py  booking_credentials.py  claude.py  cliniko.py  crypto.py  dataforseo.py  gbp.py  gbp_media.py  gbp_provisioning.py  halaxy.py  hotdoc.py  jane.py  menu_images.py  nookal.py  practicepal.py  resend_email.py  square_appointments.py  square_catalog.py  square_images.py  square_oauth.py  structured_extract.py  twilio_sms.py
backend/tests/: conftest.py
backend/tests/unit/: test_auth.py  test_billing_portal.py  test_billing_usage.py  test_booking_credentials.py  test_claude.py  test_competitor.py  test_competitors_api.py  test_crypto.py  test_dead_letter.py  test_gbp_envelope_decode.py  test_gbp_provisioning.py  test_halaxy_adapter.py  test_health.py  test_lifespan.py  test_locations.py  test_menu_images.py  test_menu_sync.py  test_nookal_adapter.py  test_outbound_durable.py  test_practitioners_api.py  test_queue_tasks.py  test_rankings_api.py  test_retry.py  (+13 more)
backend/utils/: reconcile.py  retry.py
(+77 files in other folders)
