[project]
name = "local-biz-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "supabase>=2.0.0",
    "anthropic>=0.34.0",
    "stripe>=9.0.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "arq>=0.26.0",
    "pytz>=2024.1",
    "pydantic-settings>=2.0.0",
    "resend>=2.0.0",
    "twilio>=9.0.0",
    "workalendar>=17.0.0",
    "beautifulsoup4>=4.12.0",
    "sentry-sdk>=1.40.0",
    "cryptography>=42.0.0",
    "PyJWT>=2.8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
